# car_number_detection

./: CMakeLists.txt  README.md
data/classifiers/: plates_svm_classifier.yml
data/classifiers/character/: recognizer-hist.xml  recognizer-img.xml  recognizer-old2.xml  recognizer-svm 35% arial.xml  recognizer-svm 5% car.xml  recognizer-svm 75%.xml  recognizer-svm 8% arial.xml  recognizer_trained - 1k train 0.07% errors on 1.3k.xml
include/: PlateSVM.cpp  PlateSVM.h  number_plate_detector.hpp  plate_recognizer.hpp  plate_svm.hpp  regiondetector.cpp  regiondetector.h  symbol_recognizer.h
scripts/: imprint.py
src/: CMakeLists.txt  main.cpp  number_plate_detector.cpp  plate_recognizer.cpp  plate_svm.cpp  regiondetector.cpp  symbol_recognizer.cpp
tools/: samples_gen.py
